:hammer: Modified RMF-relevant endpoints to allow for configurability with robot id specification.
