# swagger_server/swagger/swagger.yaml
@@ -39,11 +39,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/ROS1String'
       x-openapi-router-controller: swagger_server.controllers.user_controller
-  /robot/goal:
+  /robot/{robot_id}/goal:
     post:
       tags:
       - user
       summary: Send navigation goal to Robot
+      parameters:
+      - name: robot_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+        example: tb3_0
       description: Robot will move to input navigational goal.
       operationId: send_nav_goal
       requestBody:
@@ -79,11 +88,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/Twist'
       x-openapi-router-controller: swagger_server.controllers.user_controller
-  /robot/status:
+  /robot/{robot_id}/status:
     get:
       tags:
       - user
       summary: Get status information of robot
+      parameters:
+      - name: robot_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+        example: tb3_0
       description: ""
       operationId: get_robot_status
       responses:
@@ -98,11 +116,20 @@ paths:
         "404":
           description: Robot not found
       x-openapi-router-controller: swagger_server.controllers.user_controller
-  /robot/pose:
+  /robot/{robot_id}/pose:
     get:
       tags:
       - user
       summary: Get position and orientation of robot
+      parameters:
+      - name: robot_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+        example: tb3_0
       description: ""
       operationId: get_robot_position
       responses:
@@ -117,11 +144,20 @@ paths:
         "404":
           description: Robot not found
       x-openapi-router-controller: swagger_server.controllers.user_controller
-  /robot/dock:
+  /robot/{robot_id}/dock:
     get:
       tags:
       - user
       summary: Command Robot to return to Dock (home)
+      parameters:
+      - name: robot_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+        example: tb3_0
       description: ""
       operationId: dock_robot
       responses:
@@ -132,11 +168,20 @@ paths:
         "404":
           description: Robot not found
       x-openapi-router-controller: swagger_server.controllers.user_controller
-  /robot/localise:
+  /robot/{robot_id}/localise:
     post:
       tags:
       - user
       summary: Localise Robot
+      parameters:
+      - name: robot_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+        example: tb3_0
       description: Robot will localise to input initial pose.
       operationId: localise_robot
       requestBody:
